--- a/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
+++ b/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
@@ -74,10 +74,22 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 639px) {
+@media screen and (max-width: 639px) {
   .additionalCardWrapper {
     width: 100%;
     height: 100%;
+
+    .additionalCardTitle {
+      &__label {
+        @include home-card-label-mobile;
+      }
+    }
+  }
+
+}
+
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .additionalCardWrapper {
     margin-top: 22px;
     padding: 30px 30px 48px 33px;
 
@@ -98,6 +110,27 @@
         height: 45px;
       }
     }
+  }
+}
 
+@media screen and (max-width: 479px) {
+  .additionalCardWrapper {
+    margin-top: 20px;
+    padding: 25px 20px 50px 20px;
+
+    &__text {
+      font-size: 16px;
+      line-height: 105%;
+      width: 327px;
+    }
+
+    .additionalCardTitle {
+      margin-bottom: 25px;
+
+      img {
+        width: 40px;
+        height: 40px;
+      }
+    }
   }
 }
