--- a/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
@@ -114,16 +114,35 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 639px) {
-    .solutionCardPosition {
-      &__pointer {
-        display: none; 
+@media screen and (max-width: 639px) {
+  .solutionCardPosition {
+    &__pointer {
+      display: none; 
     }
   }
+
   .solutionCardWrapper {
     width: 100%;
     height: 100%;
     margin-top: 22px;
+  }
+
+  .solutionCardTitle {
+    &__label {
+      @include home-card-label-mobile;
+    }
+  }
+
+  .mobilePointer {
+    bottom: -53px;
+    left: 93px;
+    z-index: 1;
+  }
+}
+
+
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .solutionCardWrapper {
     padding: 30px 30px 48px 33px;
 
     &__text {
@@ -136,19 +155,29 @@
   .solutionCardTitle {
     margin-bottom: 8px;
 
-    &__label {
-      @include home-card-label-mobile;
-    }
     img {
       width: 45px;
       height: 45px;
     }
   }
+}
 
-  .mobilePointer {
-    bottom: -53px;
-    left: 93px;
-    z-index: 1;
+@media screen and (max-width: 479px) {
+  .solutionCardWrapper {
+    padding: 25px 20px 50px 20px;
+
+    &__text {
+      font-size: 16px;
+      line-height: 105%;
+    }
   }
 
+  .solutionCardTitle {
+    margin-bottom: 25px;
+
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
 }
