--- a/src/widgets/Home/Advantages/Advantages.module.scss
+++ b/src/widgets/Home/Advantages/Advantages.module.scss
@@ -10,9 +10,7 @@
 }
 
 .advantagesWrapper {
-  padding-bottom: 180px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 150px 60px 180px 60px;
 
   &__title {
     @include page-title();
@@ -106,6 +104,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
   .advantagesWrapper {
+    padding: 70px 45px 80px 45px;
     .advantagesContent {
       height: auto;
     }
@@ -167,7 +166,7 @@
 
 @media screen and (min-width: 640px) and (max-width: 1024px) {
   .advantagesWrapper {
-    margin-bottom: 90px;
+    padding: 77px 30px 90px 30px;
   }
 
   .advantagesMobileContent {
@@ -221,9 +220,29 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 639px) {
+@media screen and (max-width: 639px) {
   .advantagesWrapper {
     padding: 0 15px;
+
+    .advantagesButtons {
+      &__secondary,
+      &__primary {
+        font-size: 18px;
+        line-height: 90%;
+        padding: 15px 0;
+      }
+    }
+  }
+
+  .advantagesMobileContent {
+    margin-top: 30px;
+  }
+}
+
+
+
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .advantagesWrapper {
     margin-bottom: 70px;
   }
   
@@ -239,19 +258,19 @@
 
   .topContentCards {
       max-width: 282px;
-      padding-top: 30px;
-      padding-left: 20px;
+      margin-top: 30px;
+      margin-left: 20px;
   }
 
   .middleContentCards {
     width: 261px;
     align-self: flex-end;
-    padding-right: 15px;
+    margin-right: 15px;
   }
 
   .bottomContentCards {
     width: 315px;
-    padding-left: 20px;
+    margin-left: 20px;
   }
 
   .fullWidthCardMobileWrapper {
@@ -270,7 +289,21 @@
 }
 
 @media screen and (max-width: 479px) {
-  .advantagesWrapper {
-    display: none;
+  .advantagesMobileContent {
+    display: flex;
+    flex-direction: column;
+    row-gap: 60px;
+    padding-top: 30px;
+    border-radius: 30px;
+
+    .cards {
+      row-gap: 60px;
+      padding: 0 20px;
+    }
+
+    .fullWidthCardMobileWrapper {
+      padding: 0 20px;
+      text-align: center;
+    }
   }
 }
