--- a/src/widgets/Home/Themes/components/themeQuestion/ThemeQuestion.module.scss
+++ b/src/widgets/Home/Themes/components/themeQuestion/ThemeQuestion.module.scss
@@ -49,3 +49,17 @@
     background-color: $blue-color;
   }
 }
+
+@media screen and (max-width: 1439px) {
+  .questionWrapper {
+    padding: 12px 16px;
+    border-radius: 18px;
+    .questionText {
+      font-size: 22px;
+      line-height: 87.02%;
+    }
+    .questionIcon {
+      display: none;
+    }
+  }
+}
