--- a/src/widgets/Home/Themes/Themes.module.scss
+++ b/src/widgets/Home/Themes/Themes.module.scss
@@ -581,112 +581,113 @@
   }
 
   .question__1 {
-    left: 50px;
-    top: 22px;
+    left: 17px;
+    top: 18px;
   }
 
   .question__2 {
     left: auto;
-    top: 20px;
-    right: 50px;
+    top: 45px;
+    right: 9px;
     transform: rotate(-4.16deg);
   }
 
   .question__3 {
-    right: 38px;
-    top: 100px;
-    transform: rotate(0.15deg);
+    right: 3px;
+    top: 123px;
+    transform: rotate(-10.63deg);
   }
 
   .question__4 {
-    left: 25px;
+    left: 10px;
     right: auto;
-    top: 88px;
-    transform: rotate(0deg);
+    top: 74px;
+    transform: rotate(7.77deg);
   }
 
   .question__5 {
-    left: auto;
-    right: 15px;
-    top: 164px;
+    left: 12px;
+    right: auto;
+    top: 170px;
     transform: rotate(4deg);
   }
 
   .question__12 {
-    left: 60px;
-    top: 170px;
-    transform: rotate(-2deg);
+    left: 43px;
+    top: 231px;
+    transform: rotate(2deg);
   }
   
   .question__6 {
-    right: 21px;
-    top: 228px;
-    transform: rotate(-3deg);
+    right: 11px;
+    top: 284px;
+    transform: rotate(-5.09deg);
   }
   
   .question__7 {
-    left: 53px;
-    top: 291px;
-    transform: rotate(-3deg);
+    left: 18px;
+    top: 354px;
+    transform: rotate(3.05deg);
   }
 
   .question__8 {
-    left: 31px;
-    right: auto;
-    top: 232px;
+    left: auto;
+    right: 40px;
+    top: 195px;
     transform: rotate(-6deg);
   }
   
   .question__9 {
     left: auto;
-    right: 14px;
-    top: 396px;
-    transform: rotate(2.55deg);
+    right: 99px;
+    top: 616px;
+    transform: rotate(-1.57deg);
   }
   
   .question__10 {
-    right: 41px;
-    top: 302px;
+    right: 15px;
+    top: 371px;
     transform: rotate(-4.69deg);
   }
   
   .question__11 {
-    left: 17px;
-    top: 370px;
+    left: 12px;
+    top: 451px;
     transform: rotate(7deg);
   }
   
   .question__20 {
     left: auto;
-    right: 44px;
-    bottom: 150px;
+    right: 32px;
+    bottom: 250px;
+    transform: rotate(-5.05deg);
   }
   
   .question__21 {
     left: auto;
-    right: 50px;
-    bottom: 91px;
+    right: 34px;
+    bottom: 345px;
     transform: rotate(0deg);
   }
   
   .question__22 {
-    right: 113px;
-    bottom: 10px;
-    left: auto;     
-    transform: rotate(1.66deg);
+    right: auto;
+    left: 24px;
+    bottom: 260px;
+    transform: rotate(6.57deg);
   }
   
   .question__23 {
     right: auto;
-    left: 24px;
-    bottom: 171px;
-    transform: rotate(-1.61deg);
+    left: 123px;
+    bottom: 0;
+    transform: rotate(-5.17deg);
   }
   
   .question__24 {
     right: auto;
-    left: 18px;
-    bottom: 73px;
-    transform: rotate(-6deg);
+    left: 28px;
+    bottom: 84px;
+    transform: rotate(0.39deg);
   }
 }
