--- a/src/widgets/Home/Contacts/Contacts.module.scss
+++ b/src/widgets/Home/Contacts/Contacts.module.scss
@@ -54,8 +54,7 @@
 .leftColumnIcons {
   display: flex;
   align-items: flex-start;
-  column-gap: 27px;
-  // justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: 83px;
 }
 
@@ -96,8 +95,8 @@
     }
   }
 
-  .leftColumnIcons {
-    row-gap: 34px;
+  .contentLeftColumn {
+    max-width: 585px;
   }
 }
 
