--- a/src/widgets/Home/Contacts/Contacts.module.scss
+++ b/src/widgets/Home/Contacts/Contacts.module.scss
@@ -33,10 +33,12 @@
 .contactsContent {
   position: relative;
   width: 100%;
-  height: 877.05px;
+  height: auto;
   border-radius: 50px;
   padding: 51px 56px 55.71px 45px;
-  background-image: url("./assets/molot.png");
+  background-image: url("./assets/bg-contacts.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-top: 65px;
 
   display: flex;
@@ -59,7 +61,8 @@
 .leftColumnIcons {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  column-gap: 27px;
+  // justify-content: space-between;
   margin-bottom: 83px;
 }
 
@@ -134,6 +137,73 @@
       line-height: 105%;
       margin-bottom: 12px;
       width: 293px;
+    }
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .contactsContent {
+    padding: 0;
+    flex-direction: column;
+    height: auto;
+    background: none;
+    align-items: center;
+  }
+
+  .contentLeftColumn {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 640px) and (max-width: 1023px) {
+  .contactsWrapper {
+    padding: 0 30px;
+    margin-bottom: 90px;
+  }
+
+  .contactsContent {
+    margin-top: 40px;
+  }
+
+  .leftColumnIcons {
+    justify-content: center;
+    column-gap: 24px;
+    margin-bottom: 25px;
+  }
+
+  .contentInfo {
+    padding: 60px 50px 60px 40px;
+    background-image: url("./assets/bg-contacts.png");
+    border-radius: 20.7865px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 364.48px;
+    margin-bottom: 38px;
+
+    .contentTitle {
+      font-size: 28px;
+      line-height: 90%;
+      margin-bottom: 24px;
+      width: 410px;
+    }
+
+    .contentParagraph {
+      font-size: 22px;
+      line-height: 105%;
+    }
+  }
+
+  .contentRightColumn {
+    width: 100%;
+    &__title {
+      font-size: 28px;
+      line-height: 90%;
+      margin-bottom: 10px;
+    }
+    &__paragraph {
+      font-size: 18px;
+      line-height: 105%;
+      margin-bottom: 23px;
     }
   }
 }
