--- a/src/widgets/Home/Contacts/components/ContactCard/ContactCard.module.scss
+++ b/src/widgets/Home/Contacts/components/ContactCard/ContactCard.module.scss
@@ -55,12 +55,16 @@
   }
 }
 
+@media screen and (max-width: 1023px) {
+  .contactCardWrapper {
+    width: 100%;
+    border: none;
+  }
+}
+
 @media screen and (min-width: 640px) and (max-width: 1023px) {
   .contactCardWrapper {
-    // width: 278.19px;
-    width: 100%;
     height: 193.19px;
-    border: none;
     row-gap: 17px;
 
     img {
@@ -73,5 +77,22 @@
       line-height: 105%;
     }
   }
+}
 
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .contactCardWrapper {
+    height: 150px;
+    row-gap: 13px;
+    border-radius: 30px;
+
+    img {
+      width: 76.56px;
+      height: 76.56px;
+    }
+
+    .contactCardParagraph {
+      font-size: 15px;
+      line-height: 105%;
+    }
+  }
 }
