--- a/src/widgets/Navigation/Navigation.module.scss
+++ b/src/widgets/Navigation/Navigation.module.scss
@@ -100,8 +100,8 @@
       margin-bottom: 0;
     }
     .line2 {
-      transform: translateX(0);
-      transition: all .25s;
+      // transform: translateX(0);
+      // transition: all .25s;
       opacity: 1;
     }
     .line3 {
@@ -115,17 +115,17 @@
       .line1 {
         transform: rotate(225deg);
         transition: all .25s;
-        margin-bottom: -12px;
+        margin-bottom: -16px;
       }
       .line2 {
-        transform: translateX(-10px);
-        transition: all .25s;
+        // transform: translateX(-10px);
+        // transition: all .25s;
         opacity: 0;
       }
       .line3 {
         transform: rotate(-225deg);
         transition: all .25s;
-        margin-top: -12px;
+        margin-top: -16px;
       }
   }
 
